2023-01-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (formatf32): Add literal parameter to the
	instruction's doc.
	(formatf64): Likewise.

2023-01-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/riscv.pk (RV_Opcode): Remove the re-definition.
	(RV32_OPCODE_*): Change the type from `RV_Opcode' to `uint<7>'.
	(RV32_InsnFmt_I): Adapt.
	(RV32_InsnFmt_S): Likewise.
	(RV32_InsnFmt_B): Likewise.
	(RV32_InsnFmt_U): Likewise.
	(RV32_InsnFmt_J): Likewise.
	(rv32_lui): Likewise.
	(rv32_auipc): Likewise.
	(rv32_jal): Likewise.
	(_rv32_branch): Likewise.
	(rv32_jalr): Likewise.
	(rv32_lb): Likewise.
	(rv32_lh): Likewise.
	(rv32_lw): Likewise.
	(rv32_lbu): Likewise.
	(rv32_lhu): Likewise.
	(rv32_addi): Likewise.
	(rv32_slti): Likewise.
	(rv32_sltiu): Likewise.
	(rv32_xori): Likewise.
	(rv32_ori): Likewise.
	(rv32_andi): Likewise.
	(rv32_slli): Likewise.
	(rv32_srli): Likewise.
	(rv32_srai): Likewise.
	(rv32_fence): Likewise.
	(rv32_ecall): Likewise.
	(rv32_ebreak): Likewise.
	(_rv32_op): Likewise.
	(_rv32_s): Likewise.

2023-01-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/ieee754.pk: New pickle for IEEE 754 floating-point
	numbers based on initial code from apache2.
	* pickles/Makefile.am (dist_pickles_DATA): Add new pickle.
	* testsuite/poke.pickles/ieee754-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2023-01-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-insn.def (formatf32): Add new instruction.
	(formatf64): Likewise.
	* libpoke/pvm.jitter (FORMATF): New macro for formatting
	floating-point numbers.
	(formatf32): New instruction for formatting floating-point
	numbers.
	(formatf64): Likewise.
	* libpoke/pkl-ast.h (PKL_AST_FORMAT_ARG_FLOATING_POINT_P): New macro.
	(PKL_AST_FORMAT_ARG_FLOATING_POINT_STYLE): Likewise.
	(PKL_AST_FORMAT_ARG_FLOATING_POINT_PREC): Likewise.
	(PKL_AST_FORMAT_ARG_FLOATING_POINT_WIDTH): Likewise.
	(PKL_AST_FORMAT_ARG_FLOATING_POINT_WIDTH_SINGLE): Likewise.